[gd_scene load_steps=3 format=3 uid="uid://cth47lc41wasg"]

[ext_resource type="Script" uid="uid://ch4wll77sry72" path="res://Test/AudioInfo.gd" id="1_asos1"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_blgfo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_asos1")

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -20.0
offset_right = 31.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Record" type="Button" parent="hbox"]
layout_mode = 2
text = "Record"

[node name="Play" type="Button" parent="hbox"]
layout_mode = 2
text = "Play"

[node name="Save" type="Button" parent="hbox"]
layout_mode = 2
text = "Salvar"

[node name="Info" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="microphone" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_blgfo")
autoplay = true
bus = &"Record"

[connection signal="pressed" from="hbox/Record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="hbox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="hbox/Save" to="." method="_on_save_pressed"]
